[package]
name = "astria-build-info"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
workspace = true
features = ["derive"]
optional = true

[dependencies.serde_json]
workspace = true
optional = true

[dependencies.vergen]
version = "8"
features = ["build", "cargo", "rustc", "git", "git2"]
optional = true

[features]
build = ["dep:vergen"]
runtime = ["dep:serde", "dep:serde_json"]
