[package]
name = "astria-diagnostics-console"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["deprecated", "derive"] }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
shlex = "1.3.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "net", "sync"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-util = { workspace = true }
